src/components/app/DragAndDrop.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

.dragAndDropArea {
  display: inherit;
  width: 100%;
  isolation: isolate;
}

.dragAndDropOverlayWrapper {
  --internal-foreground-color: #666;
  --internal-background-color: rgb(255 255 255 / 0.9);
  --internal-border-color: #888;

  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  align-items: stretch;
  justify-content: center;
  padding: 1em;
  background-color: var(--internal-background-color);
  opacity: 0;
  pointer-events: none;
  transition: opacity 200ms;
}

:root.dark-mode {
  .dragAndDropOverlayWrapper {
    --internal-foreground-color: var(--grey-40);
    --internal-background-color: rgb(0 0 0 / 0.9);
    --internal-border-color: var(--grey-30);
  }
}

.dragAndDropOverlayWrapper.dragging {
  opacity: 1;
}

.dragAndDropOverlay {
  display: flex;
  width: 100%;
  align-items: center;
  justify-content: center;
  border: 2px dashed var(--internal-border-color);
  border-radius: 10px;
  color: var(--internal-foreground-color);
  font-size: 30px;
  text-align: center;
}

